--- a/package.json
+++ b/package.json
@@ -1,11 +1,40 @@
 {
   "name": "ninja",
-  "version": "1.0.0",
-  "description": "ninja bot",
-  "main": "app.js",
+  "version": "3.3.0",
+  "description": "good bot.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\"",
+    "start": "node index.js"
+  },
+  "engines": {
+    "npm": "3.10.7"
+  },
   "author": "Flater",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "@google-cloud/speech": "^0.3.0",
+    "date.js": "^0.3.1",
+    "discord.js": "^11.3.2",
+    "dotenv": "^2.0.0",
+    "fluent-ffmpeg": "^2.1.0",
+    "heapdump": "^0.3.7",
+    "image-size": "^0.5.0",
+    "knuth-shuffle": "^1.0.1",
+    "moment": "^2.16.0",
+    "moment-duration-format": "^1.3.0",
+    "node-http-ping": "^0.2.2",
+    "node-schedule": "^1.2.0",
+    "numeral": "^1.5.3",
+    "random-js": "^1.0.8",
+    "request": "^2.74.0",
+    "request-promise-native": "^1.0.3",
+    "sharp": "^0.16.2",
+    "underscore": "^1.8.3",
+    "url": "^0.11.0",
+    "valid-url": "^1.0.9",
+    "xkcd": "^1.1.1",
+    "youtube-node": "^1.3.0",
+    "ytdl-core": "^0.7.17"
   }
 }
