--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "npm": "3.10.7"
   },
   "author": "Flater",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@google-cloud/speech": "^0.3.0",
     "date.js": "^0.3.1",
