--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js"
   },
   "engines": {
-    "npm": "6.6.0"
+    "npm": "5.6.0"
+    "node": "6.6.0"
   },
   "author": "Flater",
   "license": "MIT",
