--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "npm": "5.6.0"
+    "npm": "5.6.0",
     "node": "6.6.0"
   },
   "author": "Flater",
