--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
     "sharp": "^0.16.2",
+    "sqlite": "^2.9.2",
     "underscore": "^1.8.3",
     "url": "^0.11.0",
     "valid-url": "^1.0.9",
