--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Best bot.",
   "main": "index.js",
   "scripts": {
+    "lzz": "lzz -hx hpp -sx cpp -k BETTER_SQLITE3 -d -hl -sl -e ./src/better_sqlite3.lzz",
     "test": "echo \"Error: no test specified\"",
     "start": "node index.js"
   },
