--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js"
   },
   "engines": {
-    "npm": "3.10.7"
+    "npm": "3.10.7",
+    "node": "10.9.0"
   },
   "author": "Flater",
   "license": "ISC",
