--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "discord.js": "^11.3.2",
     "dotenv": "^2.0.0",
     "fluent-ffmpeg": "^2.1.0",
+    "fortnite": "^4.1.1",
     "heapdump": "^0.3.7",
     "image-size": "^0.5.0",
     "knuth-shuffle": "^1.0.1",
