--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^2.0.0",
     "fluent-ffmpeg": "^2.1.0",
     "fortnite": "^4.1.1",
-    "fortnite-api": "^2.10.0"
+    "fortnite-api": "^2.10.0",
     "heapdump": "^0.3.7",
     "image-size": "^0.5.0",
     "knuth-shuffle": "^1.0.1",
