--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js"
   },
   "engines": {
-    "npm": "6.9.0"
+    "npm": "6.9.0",
+    "node" "10.3.0"
   },
   "author": "Flater",
   "license": "MIT",
