--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "engines": {
     "npm": "6.9.0",
-    "node" "10.3.0"
+    "node": "10.3.0"
   },
   "author": "Flater",
   "license": "MIT",
